--- a/index.html
+++ b/index.html
@@ -342,13 +342,14 @@
 <!--FUENTES-->
 
 
-        <aside class="bg-celeste text-white">
-            <div class="container">
+        <aside class="bg-celeste text-white h-50">
+            <div class="container w-75 p-3">
                 <div class="row py-5">
-                    <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto small text-center">
-                        <h5 class="mt-3 mb-2 text-white">Fuentes</h5>
-                        
-                        <p>Centro de Investigación Dinámica de Ecosistemas Marinos de Altas Latitudes (IDEAL/UACh).</p>
+                    <div class="col-sm-11 col-md-10 col-lg-9 col-xl-8 col-xxl-7 mx-auto small w-50">
+
+                        <h5 class="mt-3 mb-2 text-white text-center">Fuentes</h5>
+
+                        <p class="text-left">Centro de Investigación Dinámica de Ecosistemas Marinos de Altas Latitudes (IDEAL/UACh).</p>
                         
                         <p>Proyecto FONDAP N°15150003 financiado por la Agencia Nacional de Investigación y Desarrollo (ANID).</p>
 
